RESOLVED FIXED199419
Exception thrown from -[AVSampleBufferRenderSynchronizer addRenderer:], not a valid renderer.
https://bugs.webkit.org/show_bug.cgi?id=199419
Summary Exception thrown from -[AVSampleBufferRenderSynchronizer addRenderer:], not a...
Jer Noble
Reported 2019-07-02 13:34:23 PDT
Exception thrown from -[AVSampleBufferRenderSynchronizer addRenderer:], not a valid renderer.
Attachments
Patch (2.02 KB, patch)
2019-07-02 13:36 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2019-07-02 13:34:38 PDT
Jer Noble
Comment 2 2019-07-02 13:36:29 PDT
WebKit Commit Bot
Comment 3 2019-07-03 15:16:53 PDT
Comment on attachment 373355 [details] Patch Clearing flags on attachment: 373355 Committed r247113: <https://trac.webkit.org/changeset/247113>
WebKit Commit Bot
Comment 4 2019-07-03 15:16:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.