Exception thrown from -[AVSampleBufferRenderSynchronizer addRenderer:], not a valid renderer. https://bugs.webkit.org/show_bug.cgi?id=199419 <rdar://problem/52141139>

Reviewed by Eric Carlson.

Sometimes, -[AVSampleBufferDisplayLayer init] will return nil. When that happens, passing a nil
pointer to -addRenderer: will throw an exception.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::ensureLayer):


Canonical link: https://commits.webkit.org/213379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247113 268f45cc-cd09-0410-ab3c-d52691b4dbfc